Documented Grids and added a few options.

--- a/packages/controls/index.html
+++ b/packages/controls/index.html
@@ -10,6 +10,11 @@
 <style>
 .show-grid div {
   border: thin solid silver;
+  background-color: #ddd
+}
+.show-grid {
+  background-color: #eee;
+  margin: 2px;
 }
 </style>
   </head>
